fixed an issue with the content alignment

--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,12 @@ h1.company-name {
 .info__boxes {
   grid-area: box;
 }
+
+.info__box {
+  display: grid;
+  justify-content: end;
+}
+
 .info__box-img {
   width: 100%;
   -o-object-fit: cover;
@@ -272,12 +278,9 @@ h1.company-name {
   margin-bottom: 0.5em;
 }
 .info__box-link {
-  display: block;
   margin-bottom: 2em;
   font-weight: bold;
   color: #d6c78e;
-  float: right;
-  text-align: right;
   text-decoration: none;
   transition: color 0.3s;
 }
@@ -438,10 +441,6 @@ h1.company-name {
   .info {
     grid-template-areas: "title box" "title box" "title box";
     padding: 5em 2em;
-  }
-  .info__box {
-    display: grid;
-    justify-content: end;
   }
   .info__title {
     padding: 0 1em;
